Fixed Horizontal Scrollbar. Added Detailed and Create Menu under Navigation. October 02, 2020 at 07:16 PM IST

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,14 +5,18 @@
 }*/
 
 body, html {
-  font-family: 'Playfair Display', serif;
-  font-size: 24px;
-  background-color: white  ;
-  /*overflow-y: scroll;
-  scrollbar-width: thin;*/
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+    max-width: 100%;
+      font-family: 'Playfair Display', serif;
+      font-size: 24px;
+      background-color: white  ;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      scrollbar-width: thin;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+      margin: 0;
+      padding: 0;
   
 }
 .father  {
@@ -188,7 +192,17 @@ form{
 }
 
 .myDiv1 {
-    font-size: 30px;     
+font-family: 'Playfair Display', serif;
+    font-weight: 500;
+    letter-spacing: 3px;
+    font-size: 24px;
+    color: black;
+    text-transform: uppercase;
+    /*background-color:black;*/
+    margin-left: 1px;
+    text-align: center;
+    /*top: 50%;*/
+    height: 50px;
 }
 /* Top navigation */
 /* Add a black background color to the top navigation */
@@ -267,14 +281,6 @@ form{
  * prefixes.
  */
 
-body
-{
-  margin: 0;
-  padding: 0;
-  
-  /* make it look decent enough */
-  
-}
 
 #menuToggle
 {
@@ -429,9 +435,21 @@ body
 {
   padding: 10px 0;
   font-size: 22px;
-  
-}
 
+
+
+}
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+
+
+
+}
+.test{
+border: 10px solid  #451e3e  ;
+}
 /*
  * And let's slide it in from the left
  */
